fix: remove horizontal scroll

--- a/styles/basic.css
+++ b/styles/basic.css
@@ -5,6 +5,10 @@ body {
   background-color: rgb(var(--co-white-rgb));
 }
 
+ul {
+  list-style-type: circle;
+}
+
 p,
 a,
 li {
