--- a/styles/main.css
+++ b/styles/main.css
@@ -26,6 +26,10 @@
   text-decoration: underline;
 }
 
+.section-list {
+  padding: 0 0 0 25px;
+}
+
 .section-skills-wrapper {
  display: flex;
 }
@@ -46,6 +50,10 @@
 .pre {
   margin: 0;
   padding: 0;
+
+  overflow-x: auto;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
 
 @media (width <= 768px) {
